<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.CrearSitio"
    android:orientation="vertical">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/fotoimagen"
        android:src="@drawable/camara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        >
    </ImageView>
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/captura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnlocalizar"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtnombretienda">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombretienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtdescripciontienda">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripciontienda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/localizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnlocalizar"
        />

    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:id="@+id/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnguardar"
        />

</LinearLayout>
</ScrollView>